style: set 1000px minimum width on coding workspace to prevent layout collapse

--- a/src/ace/static/css/coding.css
+++ b/src/ace/static/css/coding.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  min-width: 1000px;
   overflow: hidden;
 }
 
